# f-code-operator-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.build.yaml  compose.yaml
.github/workflows/: check.yaml  deploy.yaml
.sqlx/: query-063224c6636d76faf35fc7f83743419900ac8259d238c07772afc3f3f8c18a7d.json  query-2ac323324a8ed9bc0296660bc56a96a58b1a6178a8c3e2f367c09a767b386693.json  query-32dc384f62c4d22190e05c9c9144a0d101d9fc6e6de889e2e4bded8415ec0170.json  query-603982673a2864184861e6dac979276791c245109f12f3b61631da693bd77bd3.json  query-792037c2586baeca11fc16c3c7cfcdd1e0d75a2ca085749d0483f098443597ac.json  query-7cb2a9ac8a6605c2b8f83f0dcee78815bd6fc344c67adf98c6d76cbb72255d2e.json  query-8d15558bfe57d80116c5bbabc9c0eee2b21e92c062ae760decc2abd74f32871e.json
migrations/: 20251126060916_init.up.sql  20251129150553_compare_case_insensitive.down.sql  20251129150553_compare_case_insensitive.up.sql
src/: config.rs  event_handler.rs  index.js  main.rs  message.rs  state.rs  util.rs
src/check/: is_moderator.rs  mod.rs
src/command/: add.rs  delete.rs  help.rs  mod.rs  ping.rs  verify.rs
src/database/: candidate.rs
