[package]
name = "F-Code-Operator-Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
config = { version = "0.15.19", default-features = false }
poise = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "chrono", "env-filter"] }
