[package]
name = "f-code-operator-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
config = { version = "0.15.19", default-features = false }
poise = { git = "https://github.com/serenity-rs/poise" }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "chrono", "env-filter"] }
